--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,7 @@
-RewriteEngine On
-
-# disables rewrite id requested login page
-RewriteCond %{REQUEST_URI} !^/login\.php$ 
-
-# rewrites url to redirect to index.php
-RewriteBase /
-RewriteRule ^(.*)$ index.php?url=$1 [QSA]
+<Files "autoload.php">
+    Order allow,deny
+    Deny from all
+</Files>
 
 ErrorDocument 404 /errors/404.html
 ErrorDocument 500 /errors/500.html
